src/assets/styles/common.css
html,
body,
#app {
  font-family: 'brokenscript-bold' !important;
  margin: 0;
}

#sheet {
  background-image: url('../img/mouse-hole.png');
  background-repeat: no-repeat;
}

#sheet-container,
#drawer aside {
  max-width: 800px;
}

.fixed-tabs > div {
  width: 800px;
  max-width: 800px;
}

#history aside,
#hirelings aside {
  width: 440px;
  max-width: 440px;
}

blockquote {
  border-left: 2px solid #ccc;
  margin-left: 2px;
  padding-left: 2px;
}

.debug-box {
  border: 2px dashed red;
}

.scrollable {
  overflow-y: auto;
}

.stack-slice {
  border-color: #000;
  border-style: solid;
  border-top: 2px solid;
  border-left: 2px solid;
  border-right: 2px solid;
  border-bottom: none;
  margin: 0 8px;
  padding: 0 0 3px 0;
  background-color: #ccc;
  box-shadow: 2px 2px 5px 0px rgba(0, 0, 0, 0.75);
}

.chip {
  border-radius: 7px;
  background-color: #2498d6;
  color: #fff;
}

.chip-size-xs {
  padding: 0 1px;
  margin: 0 1px;
  font-size: 60%;
}

.chip-size-sm {
  padding: 0 2px;
  margin: 0 2px;
  font-size: 70%;
}

.chip-size-md {
  padding: 0 4px;
  margin: 0 4px;
  font-size: 80%;
}

.chip-size-lg {
  padding: 0 4px;
  margin: 0 4px;
  font-size: 100%;
}

.chip-size-xl {
  padding: 0 4px;
  margin: 0 4px;
  font-size: 120%;
}

.mouse-sheet {
  width: 800px !important;
  max-width: 800px !important;
  border: 0;
}

.opacity-50 {
  opacity: 0.50;
}

.opacity-75 {
  opacity: 0.75;
}

.opacity-100 {
  opacity: 1.0;
}

.form-gray,
.form-gray--bg {
  background-color: #ccc;
}

.text-secondary {
  color: #8499a4;
}

.text-small {
  font-size: 75%;
}

.clickable {
  cursor: pointer;
}

.draggable {
  cursor: grab;
}

.pips {
  height: 32px;
}

.pips-img {
  background-image: url('../img/pips.png');
  background-repeat: no-repeat;
  background-size: contain;
  background-position: left;
}

.drawer-background {
  background-image: url('../img/drawer.jpg');
  background-repeat: no-repeat;
  background-position: left;
}

.welcome-background {
  background-image: url('../img/welcome.jpg');
  background-repeat: no-repeat;
  background-position: left;
  background-size: cover;
}

.hirelings-background {
  background-image: url('../img/hirelings.jpg');
  background-repeat: no-repeat;
  background-position: left;
  background-size: cover;
}

.history-background {
  background-image: url('../img/history.jpg');
  background-repeat: no-repeat;
  background-position: left;
  background-size: cover;
}

.mouse-creation-dialog-background {
  background-image: url('../img/mouse-creation.jpg');
  background-repeat: no-repeat;
  background-position: left;
  background-size: cover;
}

.bank-background {
  background-image: url('../img/bank.jpg');
  background-repeat: no-repeat;
  background-position: left;
  background-size: cover;
}

.shadow {
  box-shadow: 2px 2px 5px 2px rgba(0, 0, 0, 0.75);
}

.card-sheet {
  border-radius: 5px;
  border-width: 2px;
  border-color: #000;
}

.card-sheet-white {
  border-radius: 5px;
  border-width: 2px;
  background-color: rgba(255, 255, 255, 0.25);
}

.card-sheet .w-card__content {
  padding: 0
}

.divider-v {
  border-left: 2px solid #000;
  width: 2px;
}

.divider-h {
  border-top: 2px solid #000;
  height: 2px;
  width: 100%;
}

.input-name {
  padding: 4px;
}

.input-value {
  color: #2498d6;
  /* color: #2c85b4; */
  font-weight: bold;
}

input,
textarea {
  color: #2498d6 !important;
  font-family: unset;
}

.condition input,
.condition textarea {
  color: #6ec2f0 !important;
  font-family: unset;
}

.toolbar-pager {
  max-height: 30px !important;
}

.w-25 {
  width: 25px;
  max-width: 25px;
}

.w-50 {
  width: 50px;
  max-width: 50px;
}

.w-75 {
  width: 75px;
  max-width: 75px;
}

.w-100 {
  width: 100px !important;
  max-width: 100px;
}

.w-150 {
  width: 150px;
  max-width: 150px;
}

.w-200 {
  width: 200px;
  max-width: 200px;
}

.w-250 {
  width: 250px;
  max-width: 250px;
}

.w-300 {
  width: 300px;
  max-width: 300px;
}

.w-350 {
  width: 350px;
  max-width: 350px;
}

.grit-1 {
  width: 118px;
  max-width: 118px;
}

.grit-2 {
  width: 230px;
  max-width: 230px;
}

.grit-3 {
  width: 340px;
  max-width: 340px;
}

.w-auto {
  width: min-content;
}

.w-half {
  width: 50%;
}

.w-max {
  width: 100%;
}

.h-max {
  height: 100%;
}

.attribute-cell {
  height: 28px;
  padding-top: 2px;
  padding-bottom: 2px;
  margin: 0;
  border: none;
}

.dice-huge {
  font-size: 32px !important;
}

.condition,
.item,
.item-1x1 {
  display: inline-block;
  font-size: 16px;
  height: 128px;
  width: 128px;
  padding: 2px;
  overflow: hidden;
}

.item-2x1 {
  width: 276px;
}

.item-1x2 {
  height: 276px;
}

.condition-title,
.item-title {
  font-size: 16px;
}

.condition-label,
.item-label {
  font-size: 100%;
  color: #ffFF00;
}

.condition-desc,
.item-desc {
  font-size: 100%;
  text-align: center;
  color: #fff;
}

.condition-desc {
  font-size: 80%;
}

.condition-item-custom-label,
.item-item-custom-label {
  font-size: 80%;
}

.item-damage,
.item-def,
.item-use,
.item-price {
  background-color: rgba(255, 255, 255, 0.5);
}

.item-damage-dice {
  background-color: rgba(255, 255, 255, 0.5);
  border-radius: 0;
  border: 0;
}

.background-black-25 {
  background-color: rgba(0, 0, 0, 0.25);
}

.background-black-50 {
  background-color: rgba(0, 0, 0, 0.5);
}

.background-black-75 {
  background-color: rgba(0, 0, 0, 0.75);
}

.background-white-25 {
  background-color: rgba(255, 255, 255, 0.25);
}

.background-white-50 {
  background-color: rgba(255, 255, 255, 0.5);
}

.background-white-75 {
  background-color: rgba(255, 255, 255, 0.75);
}

.background-white-85 {
  background-color: rgba(255, 255, 255, 0.85);
}

.item-damage,
.item-def {
  font-size: 125%;
  color: #000;
  border: 1px solid;
  padding: 2px;
}

.item-price {
  font-size: 100%;
  color: #000;
}

.condition-clear {
  font-size: 80%;
  color: #000;
}

.condition-background {
  background-image: url('../img/condition.png');
  background-repeat: no-repeat;
  background-size: contain;
  background-position: left;
}

.item-background {
  background-image: url('../img/item.png');
  /* background-repeat: no-repeat; */
  /* background-size: contain; */
  background-position: left;
}

.condition-size-xs,
.item-size-xs {
  max-height: 64px;
  max-width: 64px;
  font-size: 8px;
}

.condition-size-sm,
.item-size-sm {
  max-height: 80px;
  max-width: 80px;
  font-size: 10px;
}

.condition-size-md,
.item-size-md {
  max-height: 96px;
  max-width: 96px;
  font-size: 12px;
}

.condition-size-lg,
.item-size-lg {
  max-height: 112px;
  max-width: 112px;
  font-size: 14px;
}

.condition-size-xl,
.item-size-xl {
  max-height: 128px;
  max-width: 128px;
  font-size: 16px;
}

.drawer .condition-label,
.drawer .item-label {
  font-size: 12px;
}

.drawer .item-damage, .drawer .item-def {
  font-size: 14px;
  padding: 0px;
}

.drawer .condition-desc,
.drawer .item-desc {
  font-size: 10px;
}

.drawer .condition-clear {
  font-size: 10px;
  color: #000;
}

.inventory-cell {
  border: 1px dashed #aaa;
  height: 148px;
  width: 132px;
  display: inline-block;
  color: #888;
  text-align: center;
}

.inventory-cell-label {
  font-size: 80%
}

.inline-block {
  display: inline-block;
}

.flat {
  border: 0;
}

.bank-drawer-items {
  overflow-y: auto;
  height: 300px;
}

.no-flex aside.w-drawer {
  display: block;
}

.dice3d-canvas {
  position: absolute;
  top: 0;
  left: 0;
  z-index: 2000; /* Above all */;
}

.bank-items {
  min-height: 64px;
}

